@@ -22,6 +22,7 @@ function register ({ config: { indexLatestOnly, languages, ...extraArguments } }
   }
 
   this.on('uiLoaded', ({ playbook, uiCatalog }) => {
+    playbook.env.SITE_SEARCH_PROVIDER = 'lunr'
     const jsVendorPath = playbook.ui.outputDir + '/js/vendor'
     uiCatalog.addFile({
       contents: new LazyReadable(() => fs.createReadStream(require.resolve('lunr/lunr.min.js'))),
@@ -32,6 +33,7 @@ function register ({ config: { indexLatestOnly, languages, ...extraArguments } }
   })
 
   this.on('beforePublish', ({ playbook, siteCatalog, contentCatalog }) => {
+    delete playbook.env.SITE_SEARCH_PROVIDER
     const index = generateIndex(playbook, contentCatalog, { indexLatestOnly, languages, logger })
     siteCatalog.addFile(generateIndex.createIndexFile(index))
   })
