@@ -1,7 +1,7 @@
 <script src="{{uiRootPath}}/js/site.js"></script>
-{{#if (eq env.DOCSEARCH_ENGINE 'lunr')}}
+{{#if env.SITE_SEARCH_PROVIDER}}
 <script src="{{uiRootPath}}/js/vendor/lunr.js"></script>
-<script src="{{uiRootPath}}/js/vendor/search.js" id="search-script" data-base-path="{{siteRootPath}}" data-page-path="{{@root.page.url}}"></script>
+<script src="{{uiRootPath}}/js/vendor/search.js" id="search-script" data-base-path="{{siteRootPath}}" data-page-path="{{@root.page.url}}" data-stylesheet="{{uiRootPath}}/css/search.css"></script>
 <script async src="{{siteRootPath}}/search-index.js"></script>
 {{/if}}
 <script async src="{{uiRootPath}}/js/vendor/highlight.js"></script>
