@@ -1,1 +1,0 @@
-<link rel="stylesheet" href="{{uiRootPath}}/css/search.css">
